--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@ body::before{
 }
 .btn-ghost{background:transparent;border-color:var(--border2);color:var(--text2)}
 .btn-ghost:hover{background:var(--surface2);color:var(--text);border-color:var(--border3)}
-.btn-primary{
+.btn-index{background:rgba(219,112,147,0.12);border-color:rgba(219,112,147,0.35);color:#d4748f;text-decoration:none;padding:4px 11px;font-size:11px;border-radius:6px}
+.btn-index:hover{background:rgba(219,112,147,0.2);border-color:rgba(219,112,147,0.55);color:#e08da5}
+
   background:var(--accent2);border-color:var(--accent2);color:#fff;font-weight:700;
   box-shadow:0 0 18px rgba(34,197,94,0.2);
 }
@@ -385,6 +387,7 @@ body::before{
   <div class="logo">
     <div class="logo-mark">🫒</div>
     <div class="logo-text">Olives Builder</div>
+    <a href="olives-feature-index-v3.html" target="_blank" class="btn btn-index">Feature Index</a>
     <span class="logo-version">v2.1</span>
   </div>
   <div class="vsep"></div>
