--- a/index.html
+++ b/index.html
@@ -22,73 +22,7 @@
 .page-view { display: none; height: 100%; }
 .page-view.active { display: block; }
 
-/* ── LAUNCHER (hub screen) ── */
-#page-launcher {
-  position: fixed; inset: 0;
-  background: var(--bg);
-  display: flex; flex-direction: column;
-  font-family: 'Outfit', sans-serif; color: var(--text);
-}
-#page-launcher::before {
-  content:''; position:fixed; inset:0;
-  background-image:radial-gradient(circle at 1px 1px,rgba(255,255,255,0.028) 1px,transparent 0);
-  background-size:28px 28px; pointer-events:none; z-index:0;
-}
-.launcher-topbar {
-  height:52px; display:flex; align-items:center; padding:0 28px; gap:10px;
-  background:rgba(22,25,33,0.95); backdrop-filter:blur(12px);
-  border-bottom:1px solid var(--border); position:relative; z-index:1;
-}
-.launcher-logo-mark {
-  width:28px;height:28px;border-radius:8px;
-  background:linear-gradient(135deg,#22c55e,#16a34a);
-  display:flex;align-items:center;justify-content:center;
-  font-size:14px;color:#fff;box-shadow:0 0 12px rgba(34,197,94,0.3);
-}
-.launcher-body {
-  flex:1; display:flex; align-items:center; justify-content:center;
-  position:relative; z-index:1;
-}
-.launcher-grid {
-  display:grid; grid-template-columns:repeat(3,1fr);
-  gap:14px; padding:32px; width:100%; max-width:900px;
-}
-.lcard {
-  background:var(--surface); border:1px solid var(--border);
-  border-radius:16px; padding:26px 22px;
-  cursor:pointer; transition:all 0.2s;
-  display:flex; flex-direction:column; gap:12px;
-  position:relative; overflow:hidden; text-decoration:none; color:inherit;
-}
-.lcard:hover { border-color:var(--lc-color,var(--accent)); transform:translateY(-2px); box-shadow:0 8px 32px rgba(0,0,0,0.4); }
-.lcard-icon { width:44px;height:44px;border-radius:11px;display:flex;align-items:center;justify-content:center;font-size:20px; }
-.lcard-eye { font-size:9px;font-weight:700;letter-spacing:0.12em;text-transform:uppercase;font-family:'IBM Plex Mono',monospace; }
-.lcard-title { font-size:17px;font-weight:800;color:var(--text);letter-spacing:-0.01em; }
-.lcard-desc { font-size:12px;color:var(--text2);line-height:1.6;flex:1; }
-.lcard-arrow { font-size:11px;font-weight:600;font-family:'IBM Plex Mono',monospace; }
-.lcard-wide { grid-column:span 2; }
 
-.lcard-green  { --lc-color:var(--accent);  }
-.lcard-green  .lcard-eye,.lcard-green  .lcard-arrow { color:var(--accent); }
-.lcard-green  .lcard-icon { background:rgba(74,222,128,0.1); }
-
-.lcard-blue   { --lc-color:#60a5fa; }
-.lcard-blue   .lcard-eye,.lcard-blue   .lcard-arrow { color:#60a5fa; }
-.lcard-blue   .lcard-icon { background:rgba(96,165,250,0.1); }
-
-.lcard-cyan   { --lc-color:#22d3ee; }
-.lcard-cyan   .lcard-eye,.lcard-cyan   .lcard-arrow { color:#22d3ee; }
-.lcard-cyan   .lcard-icon { background:rgba(34,211,238,0.1); }
-
-.lcard-pink   { --lc-color:var(--pink); }
-.lcard-pink   .lcard-eye,.lcard-pink   .lcard-arrow { color:var(--pink); }
-.lcard-pink   .lcard-icon { background:rgba(212,116,143,0.1); }
-
-@keyframes fadeUp{from{opacity:0;transform:translateY(14px)}to{opacity:1;transform:translateY(0)}}
-.lcard { animation:fadeUp 0.3s ease both; }
-.lcard:nth-child(1){animation-delay:0.04s}.lcard:nth-child(2){animation-delay:0.08s}
-.lcard:nth-child(3){animation-delay:0.12s}.lcard:nth-child(4){animation-delay:0.16s}
-.lcard:nth-child(5){animation-delay:0.20s}
 
 /* ── FULLSCREEN WRAPPERS ── */
 #page-home, #page-canvas, #page-features {
@@ -177,9 +111,7 @@ body::before{
 .btn-index{background:rgba(219,112,147,0.12);border-color:rgba(219,112,147,0.35);color:#d4748f;text-decoration:none;padding:4px 11px;font-size:11px;border-radius:6px}
 .btn-index:hover{background:rgba(219,112,147,0.2);border-color:rgba(219,112,147,0.55);color:#e08da5}
 
-  background:var(--accent2);border-color:var(--accent2);color:#fff;font-weight:700;
-  box-shadow:0 0 18px rgba(34,197,94,0.2);
-}
+.btn-primary{background:var(--accent2);border-color:var(--accent2);color:#fff;font-weight:700;box-shadow:0 0 18px rgba(34,197,94,0.2);}
 .btn-primary:hover{background:#16a34a;box-shadow:0 0 26px rgba(34,197,94,0.35)}
 
 /* ── PAGE BODY ── */
@@ -1176,61 +1108,6 @@ html,body{height:100%;overflow:hidden;font-family:'Outfit',sans-serif;background
 </head>
 <body style="background:var(--bg);margin:0;padding:0">
 
-<!-- ══════════════════════════════════════
-     PAGE: LAUNCHER (hub)
-══════════════════════════════════════ -->
-<div id="page-launcher">
-  <div class="launcher-topbar">
-    <div class="launcher-logo-mark">🫒</div>
-    <span style="font-size:14px;font-weight:700;color:var(--text)">Olives Builder</span>
-    <span style="font-size:9px;font-family:'IBM Plex Mono',monospace;color:var(--text3);background:var(--surface2);border:1px solid var(--border);padding:2px 7px;border-radius:4px">v2.1</span>
-  </div>
-  <div class="launcher-body">
-    <div class="launcher-grid">
-
-      <div class="lcard lcard-green lcard-wide" onclick="showPage('home')">
-        <div class="lcard-icon">🏠</div>
-        <div class="lcard-eye">Main Dashboard</div>
-        <div class="lcard-title">Journey Manager</div>
-        <div class="lcard-desc">Browse all campaigns — Active, In Design and Completed. Create new journeys, manage your full campaign library and track performance.</div>
-        <div class="lcard-arrow">→ Open campaign list</div>
-      </div>
-
-      <div class="lcard lcard-blue" onclick="showPage('canvas')">
-        <div class="lcard-icon">⚡</div>
-        <div class="lcard-eye">Journey Builder</div>
-        <div class="lcard-title">Canvas</div>
-        <div class="lcard-desc">Drag-and-drop journey builder. Place nodes, connect branches, configure logic and publish campaigns.</div>
-        <div class="lcard-arrow">→ Open empty canvas</div>
-      </div>
-
-      <div class="lcard lcard-blue" onclick="showPage('canvas', 'demo')">
-        <div class="lcard-icon">🗺</div>
-        <div class="lcard-eye">Journey Builder</div>
-        <div class="lcard-title">Canvas — Demo</div>
-        <div class="lcard-desc">Opens the canvas with a pre-built demo journey — two parallel branches, condition splits, random splits and comms nodes.</div>
-        <div class="lcard-arrow">→ Open demo journey</div>
-      </div>
-
-      <div class="lcard lcard-cyan" onclick="showPage('home'); setTimeout(openSetup, 200);">
-        <div class="lcard-icon">✦</div>
-        <div class="lcard-eye">Pre-Canvas Setup</div>
-        <div class="lcard-title">New Campaign</div>
-        <div class="lcard-desc">Two-screen wizard to name and configure a campaign before building — category, timeframe, entry and re-entry rules.</div>
-        <div class="lcard-arrow">→ Start setup wizard</div>
-      </div>
-
-      <div class="lcard lcard-pink" onclick="showPage('features')">
-        <div class="lcard-icon">📋</div>
-        <div class="lcard-eye">Documentation</div>
-        <div class="lcard-title">Feature Index</div>
-        <div class="lcard-desc">Full catalogue of all 49 builder features plus 9 supporting infrastructure items across all modules.</div>
-        <div class="lcard-arrow">→ Open index</div>
-      </div>
-
-    </div>
-  </div>
-</div>
 
 <!-- ══════════════════════════════════════
      PAGE: HOME (journey manager)
@@ -2078,7 +1955,7 @@ input[type=date].su-input::-webkit-calendar-picker-indicator{filter:invert(0.4) 
 ══════════════════════════════════════ -->
 <div id="page-features" style="font-family:'Syne',sans-serif">
   <div style="padding:16px 24px;background:rgba(22,25,33,0.95);backdrop-filter:blur(12px);border-bottom:1px solid var(--border);display:flex;align-items:center;gap:12px;position:sticky;top:0;z-index:100">
-    <button onclick="showPage('launcher')" style="background:var(--surface2);border:1px solid var(--border2);color:var(--text2);padding:6px 14px;border-radius:7px;font-size:12px;font-family:'Outfit',sans-serif;cursor:pointer;font-weight:600">← Back</button>
+    <button onclick="showPage('home')" style="background:var(--surface2);border:1px solid var(--border2);color:var(--text2);padding:6px 14px;border-radius:7px;font-size:12px;font-family:'Outfit',sans-serif;cursor:pointer;font-weight:600">← Back</button>
     <span style="font-size:13px;font-weight:700;color:var(--text)">Feature Index</span>
   </div>
 <header>
@@ -2777,7 +2654,7 @@ function showPage(page, mode) {
 }
 
 // Start on launcher
-showPage('launcher');
+showPage('home');
 </script>
 
 <!-- ══ HOME JS ══ -->
